fixed to-contact-form alignment justified text on mobile fixed height of mid section divider

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -218,7 +218,7 @@
     font-size: var(--font-paragraph);
     font-weight: var(--font-light);
     color: var(--text-color1);
-    text-align: center;
+    text-align: justify;
   }
 
   .light-title {
@@ -235,7 +235,7 @@
     font-size: var(--font-paragraph);
     font-weight: var(--font-light);
     color: var(--bg-color2);
-    text-align: center;
+    text-align: justify;
   }
 
   .large-heading {
@@ -284,18 +284,26 @@
     height: 953px;
     background-color: var(--bg-color3);
     width: 100%;
-    clip-path: polygon(0 29px, 100% 0, 100% 924px, 0 953px);
-    -webkit-clip-path: polygon(0 29px, 100% 0, 100% 924px, 0 953px);
+    clip-path: polygon(0 3.04%, 100% 0, 100% 96.96%, 0 100%);
+    /* -webkit-clip-path: polygon(0 29px, 100% 0, 100% 924px, 0 953px); */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
   }
 
+  #contact-form-section {
+    height: 750px;
+  }
+
+  #about-mid-section {
+    height: 800px;
+  }
+
   #to-contact-form {
+    margin: 0 25%;
     position: absolute;
-    /* left: 116.89px; */
-    left: 126.25px;
+    min-width: 50%;
     top: 1150px;
     font-weight: var(--font-semibold);
     font-size: var(--font-paragraph);
@@ -392,6 +400,10 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+  }
+
+  #about-vision {
+    margin-top: 60px;
   }
 
   /* Form */
@@ -545,20 +557,21 @@
   }
 
   .site-missing-heading {
-    font-size: var(--font-largeheading);
-    font-weight: var(--font-bold);
+    font-size: 100px;
+    font-weight: var(--font-semibold);
     text-align: center;
     position: relative;
     margin: 80px 0 30px 0;
+    color: var(--shade-color1);
   }
 
   .site-missing-heading::before {
     content: "404";
     position: absolute;
-    transform: scale(8);
+    transform: scale(3);
     margin-top: -50px;    
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.2;
   }
 
   .maxwidth-mobile {
@@ -737,7 +750,7 @@
   .dark-text {
     max-width: 610px;
     margin: 0;
-    text-align: center;
+    text-align: justify;
     font-weight: var(--font-light);
     font-size: var(--font-paragraph);
     color: var(--text-color1);
@@ -761,8 +774,8 @@
     width: 100%;
     margin: -106px 0 0 0;
     background-color: var(--bg-color3);
-    clip-path: polygon(0 106px, 100% 0, 100% 828px, 0 934px);
-    -webkit-clip-path: polygon(0 106px, 100% 0, 100% 828px, 0 934px);
+    clip-path: polygon(0 11.35%, 100% 0, 100% 88.65%, 0 100%);
+    -webkit-clip-path: polygon(0 11.35%, 100% 0, 100% 88.65%, 0 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -813,7 +826,7 @@
   .light-text {
     width: 610px;
     margin: 0;
-    text-align: center;
+    text-align: justify;
     font-weight: var(--font-light);
     font-size: var(--font-paragraph);
     color: var(--bg-color2);
@@ -1267,18 +1280,23 @@
 
   .site-missing-heading::before {
     position: absolute;
+    text-align: center;
     content: "404";
     top: 0;
     left: 0;
     font-size: 600px;
     z-index: -1;
-    transform: translate(-395px, -350px);
+    transform: translate(-395px, -450px);
     opacity: 0.2;
   }
 
   .margin-desktop-bottom-10 {
     margin-bottom: 10px;
   }
+}
+
+.center-text {
+  text-align: center;
 }
 
 .margin-bottom-30 {
